# VirtualTrainer

./: README.md  aggregator.py  common.py  exercise.py  influxdb.py  main.py  mqtt.py  orientation.py  processing.py  pyproject.toml  sensor.py  server.py  vt_gui.py
helpers/: mqtt_logger.py  mqtt_replay.py
models/mautner/: cnn_model_1.pth  cnn_model_2.pth  cnn_model_3.pth  cnn_model_4.pth  cnn_model_5.pth  cnn_model_augmentation_1.pth  cnn_model_augmentation_2.pth  cnn_model_augmentation_3.pth  cnn_model_augmentation_4.pth  cnn_model_augmentation_5.pth  cnn_model_drop_1.pth  cnn_model_drop_2.pth  cnn_model_drop_3.pth  cnn_model_drop_4.pth  cnn_model_drop_5.pth  cnn_model_transition_1.pth  cnn_model_transition_2.pth  model.py
shared/: c_struct_manager.py
